# mathsom

./: README.md  numerics_tests.py  setup.cfg  setup.py  solver_tests.py
mathsom/: __init__.py  auxfuncs.py  interpolations.py  numerics.py  solvers.py
numericsom/: __init__.py  interpolations.py  numerics.py  solvers.py
src/mathsom/: __init__.py  auxfuncs.py  interpolations.py  numerics.py  solvers.py
tests/: auxfuncs_tests.py  interpolations_tests.py
