[metadata]
name = mathsom
author = Oliver Mohr B.
author_email = oliver.mohr.b@gmail.com
version = 0.1.0
description = Personal library for math related problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oliverm91/mathsom
license_files = LICENSE
keywords = solvers, solver, interpolations, interpolation, numerics, derivatives, integrals

[options]
package_dir=
    = src
packages=find:
install_requires =
    numpy
    scipy

[options.packages.find]
where=src